Revision history for Sys-Syslog

        [BUGFIX] CPAN-RT#69986: setlogsock() doesn't return undef on failure
        (Niko Tyni).
        [BUGFIX] CPAN-RT#69997: Use the default UDP socket timeout on GNU/kFreeBSD
        as well, and lower it to a more sensible value (Niko Tyni).
        [BUGFIX] CPAN-RT#75827: syslog() logging everything regardless of log
        mask when using using numeric LOG_* macros (Bryan Thale).
        [DOC] Don't highlight "the Rules of Sys::Syslog" from the Description.
        [DIST] Add meta-information in Makefile.PL

0.30 -- 2012.08.15 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#69310: Avoid a POSIX::strftime issue on Windows
        (Michael Ludwig).
        [BUGFIX] CPAN-RT#77577: Build on Haiku-OS (Tony Cook).
        [BUGFIX] CPAN-RT#77578: Silence a compilation warning (Tony Cook).
        [BUGFIX] CPAN-RT#78044: Don't call getservbyname() when the port is
        specified (Chan Wilson).
        [TESTS] t/syslog.t no longer needs to chdir under PERL_CORE.

0.29 -- 2011.04.18 -- Sebastien Aperghis-Tramoni (SAPER) #PerlQA2011
        [BUGFIX] CPAN-RT#55215: Sys::Syslog might call exit which triggers
        DESTROY (Alexander Berger).
        [BUGFIX] CPAN-RT#55151: Allow temporary facility with native mechanism
        (Tim Jenkins).
        [BUGFIX] CPAN-RT#50928: Convert Win32 files to Unix EOLs (Steve Hay).
        [BUGFIX] CPAN-RT#50534: Unwanted space at the end of syslog message
        (Eugene V. Lyubimkin).
        [BUGFIX] CPAN-RT#49877: Options not reset after closelog() (Herbert Brezina).
        [BUGFIX] CPAN-RT#48386: Add Win32::EventLog as a prerequisite (kmx and
        Laurent Dami).
        [FEATURE] CPAN-RT#50534: Added options noeol and nonul.
        [DIST] Set INSTALLDIRS to "site" when installed on Perl 5.11+

0.28 -- 2011.04.16 -- Sebastien Aperghis-Tramoni (SAPER) #PerlQA2011
        [BUGFIX] CPAN-RT#56084: Reset connection tracking vars (Vladimir Marek).